# storyteller

./: .gitignore  README.md
python/: .gitignore  Dockerfile  README.md  pyproject.toml
python/resources/: config-compose.yaml  config-local.yaml  config.yaml
python/resources/agent/: editor#1.yaml  writer#1.yaml
python/resources/mock/google-genai/async-batch/: editor#1-EDITOR_REVIEW_MANUSCRIPT-batch-00002.json  editor#1-EDITOR_REVIEW_MANUSCRIPT-batch-00003.json  writer#1-WRITER_FIRST_DRAFT-batch-00002.json  writer#1-WRITER_FIRST_DRAFT-batch-00003.json  writer#1-WRITER_FIRST_DRAFT-batch-00004.json  writer#1-WRITER_FIRST_DRAFT-batch-00005.json  writer#1-WRITER_FIRST_DRAFT-batch-00006.json  writer#1-WRITER_FIRST_DRAFT-batch-00007.json  writer#1-WRITER_FIRST_DRAFT-batch-00008.json  writer#1-WRITER_FIRST_DRAFT-batch-00009.json  writer#1-WRITER_FIRST_DRAFT-batch-00010.json  writer#1-WRITER_FIRST_DRAFT-batch-00011.json  writer#1-WRITER_FIRST_DRAFT-batch-00012.json  writer#1-WRITER_FIRST_DRAFT-batch-00013.json  writer#1-WRITER_FIRST_DRAFT-batch-00014.json  writer#1-WRITER_FIRST_DRAFT-batch-00015.json  writer#1-WRITER_FIRST_DRAFT-batch-00016.json  writer#1-WRITER_FIRST_DRAFT-batch-00017.json  writer#1-WRITER_FIRST_DRAFT-batch-00018.json  (+3 more)
python/resources/rabbitmq/: common.yaml
python/src/: main.py
python/src/agent/: __init__.py  google_genai.py  utils.py
python/src/database/: __init__.py  model.py  postgres.py
python/src/messaging/: __init__.py  model.py  pika_asyncio.py
python/src/model/: __init__.py  common.py
python/test/model/: test_agent_config.py
(+46 files in other folders)
