[project]
name = "storyteller-python"
version = "0.1.0"
description = "The python of the storyteller acts as agent to call Google GenAI"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "asyncpg>=0.31.0",
    "google-genai>=2.10.0",
    "hydra-core>=1.4.0.dev4",
    "jinja2>=3.1.6",
    "pika>=1.4.1",
    "psycopg2-binary>=2.9.12",
    "pytest>=9.1.1",
    "pytest-asyncio>=1.4.0",
    "sqlalchemy>=2.0.51",
]

[tool.pytest.ini_options]
pythonpath = [
    "src"
]